# BaseRagSystem

./: .gitignore  README.md  docker-compose.yml  main.py  pyproject.toml  rag.py  war_and_peace_small.txt
RAGSystem/: __init__.py  main.py  rag.py
qdrant/config/: config.yaml
